Project Development Phase/Sprint 2/flask_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: news-app-ingress
  annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
 rules:
   - http: 
       paths:
         -  backend:
             service:
               name: news-app-service
               port:
                  number: 5000
            path: /
            pathType: Prefix
